Fixed gallery alignement

--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ h4 {
 }
 
 .container-music-odd {
-    background-color: rgba(255, 101, 47, 0.8);
+    background-color: rgba(255, 101, 47, 0.5);
 }
 
 .font-white {
@@ -234,7 +234,7 @@ h4 {
     font-family: 'Poppins', sans-serif;
     font-size: 0.8rem;
     font-weight: 600;
-    height: 2.5rem;
+    height: auto;
     letter-spacing: 2px;
     margin: 2px 5px;
     padding: 5px;
@@ -271,11 +271,12 @@ h4 {
 .form-control {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.4);
     border-radius: 5px;
     border: 2px solid #FFF !important;
     color: #FF652F;
     font-family: Monospace, sans-serif;
+    font-size: smaller;
     letter-spacing: 1px;
     margin: 2px 5px;
     padding: 5px;
@@ -411,12 +412,13 @@ section:nth-of-type(2n+1) {
     border: none !important;
 }
 
+/*-----FUTURE FEATURE---
 .nav-link.active {
     background-color: transparent !important;
     border-bottom: solid 2px #FF652F !important;
     color: #FF652F !important;
     font-weight: 500;
-}
+}---*/
 
 .header-nav {
     -moz-transition: all 0.5s ease-in-out;
@@ -509,7 +511,7 @@ section:nth-of-type(2) {
 }
 
 .container-home {
-    padding: 0 15px;
+    padding: 3% 0;
 }
 
 .home-tour {
@@ -583,6 +585,7 @@ section:nth-of-type(3) {
 
 .container-tour {
     background-color: rgba(0, 0, 0, 0.8);
+    padding: 3%;
 }
 
 .events {
@@ -606,7 +609,7 @@ section:nth-of-type(4) {
 
 .container-gallery {
     background-color: rgba(255, 101, 47, 0.3);
-    padding: 5% 10%;
+    padding: 5% 16%;
 }
 
 /*--------------------------------Music section-------------------------------*/
@@ -671,6 +674,7 @@ section:nth-of-type(7) {
 
 .container-booking {
     background-color: rgba(0, 0, 0, 0.8);
+    padding: 3%;
 }
 
 .booking-subheader {
